--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../colinw17.github.io/bootstrap-5.2.3-examples/dropdowns/dropdowns.css" rel="stylesheet">
         <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="assets/dist/js/bootstrap.bundle.min.js.map"></script>
 
