--- a/index.html
+++ b/index.html
@@ -173,13 +173,14 @@
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
           </div> -->
         </div>
-        <div class="overflow-hidden" style="max-height: 30vh;">
+          <div class="overflow-hidden" style="max-height: 30vh;">
           <div class="container px-5">
-            <img src="../colinw17.github.io/images/IMG_0357.heic" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+              <img src="images/IMG_0357.png" alt="" />
+            <img src="../colinw17.github.io/images/IMG_0357.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
           </div>
         </div>
-      </div>
-
+       </div>
+        
       <div class="b-example-divider"></div>
 
       <div class="container col-xxl-8 px-4 py-5">
