--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
           <div class="overflow-hidden">
           <div class="container px-5">
-              <img src="../colinw17.github.io/images/IMG_0357.png" alt="" width="400" height="400">
+             <img src="../colinw17.github.io/images/IMG_0357.png" class="img-fluid" alt="Responsive image">
           </div>
         </div>
        </div>
