--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h1 class="visually-hidden">Heroes examples</h1>
 
       <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="../assets/brand/IMG_0357.png" alt="" width="72" height="57">
+        <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
         <h1 class="display-5 fw-bold">Hello!</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">My name is Colin Witt and I am from Nazareth, Pennsylvania. I attended Northampton Community College and received an Associates degree in Web Development. Since then I have worked in digital marketing and project managament. This page is intended to give you a sense of who I am and what my skills are! </p>
