--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
           <div class="overflow-hidden">
           <div class="container px-5">
-             <img src="../assets/brand/IMG_0357.png" class="img-fluid" alt="Responsive image">
+             <img src="../assets/brand/IMG_0357.jpg" class="img-fluid" alt="Responsive image">
           </div>
         </div>
        </div>
