--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     
 
-<link href="../colinw17.github.io/bootstrap.min.css" rel="stylesheet">
-<link href="../colinw17.github.io/headers.css" rel="stylesheet">
-<link href="../colinw17.github.io/carousel.css" rel="stylesheet">
+<link href="bootstrap.min.css" rel="stylesheet">
+<link href="headers.css" rel="stylesheet">
+<link href="carousel.css" rel="stylesheet">
       
 
     <style>
