--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="suit.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        <img src="suit.jpg" class="d-block mx-lg-auto img-fluid" alt="Family" width="700" height="500" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">About Me</h1>
@@ -248,7 +248,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../colinw17.github.io/images/syd.png" class="d-block w-100" alt="mydog">
+      <img src="syd.png" class="d-block w-100" alt="mydog">
     </div>
     <div class="carousel-item">
       <img src="..." class="d-block w-100" alt="...">
