--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
 
 <link href="bootstrap.min.css" rel="stylesheet">
+<link href="bootstrap.min.css.map" rel="stylesheet">
 <link href="headers.css" rel="stylesheet">
 <link href="carousel.css" rel="stylesheet">
       
