--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <div id="home">
     <div class="px-4 py-5 my-5 text-center">
     <img class="d-block mx-auto mb-4" src="bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="display-5 fw-bold">Centered hero</h1>
+    <h1 class="display-5 fw-bold">Hello World!</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <p class="lead mb-4">Thank you for visiting my page! This will serve as a brief portfolio detailing my skills and a bit about myself. I hope you find this page helpful and feel free to reach out with any questions or comments!  </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
@@ -163,7 +163,10 @@
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">About Me</h1>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <p class="lead">I am currently 25 years old and live in Allentown, Pennsylvania. When I’m not in front of my computer, I enjoy hiking with my dog Sydney, camping, and kayaking. I am also an avid fan of the UFC and the Pittsburgh Steelers. 
+            <br>
+I received my associates degree in web development from Northampton Community College. I have worked for an integrated marketing agency called Stream Companies as a web strategist as well as a digital strategist and project manager for Essential Land management. 
+</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
           <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
