--- a/index.html
+++ b/index.html
@@ -102,14 +102,11 @@
 <!-- 1 -->
     <div id="home">
     <div class="px-4 py-5 my-5 text-center">
-    <img class="d-block mx-auto mb-4" src="bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="display-5 fw-bold">Hello World!</h1>
+    <img class="d-block mx-auto mb-4" src="thumb.png" alt="" width="72" height="57">
+    <h1 class="display-5 text-dark">Hello World!</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Thank you for visiting my page! This will serve as a brief portfolio detailing my skills and a bit about myself. I hope you find this page helpful and feel free to reach out with any questions or comments!  </p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-      </div>
+     
     </div>
   </div>
 </div>
