--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="container col-xxl-8 px-4 py-5">
                 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="suit.JPG" class="d-block mx-lg-auto img-fluid" alt="Family" width="700" height="500" loading="lazy"> 
+                        <img src="suit.JPG" class="rounded-circle mx-lg-auto img-fluid" alt="Family" width="700" height="500" loading="lazy"> 
                     </div>
                     <div class="col-lg-6">
                         <h1 class="display-5 fw-bold lh-1 mb-3">About Me</h1>
@@ -196,7 +196,6 @@
     </div>
 
  
-  <div class="b-example-divider"></div>
         
             <!-- Carousel 
       
